# AlphaGalerkin

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PLANNING.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  conftest.py  deploy_space.py  docker-compose.prod.yaml  docker-compose.yaml  mkdocs.yml  onnx_err.txt  pyproject.toml  requirements-inference.txt  requirements-vertex.txt
.claude/: settings.json
.claude/agents/: codec-engineer.md  integration-engineer.md  mcts-engineer.md  pde-solver.md  reviewer.md  sqe.md  surrogate-engineer.md
.claude/commands/: agents-research.md  audit-abstractions.md  poc-run.md  record-baseline.md
.claude/hooks/: session_start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  chess-coveragerc  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-fix-lint.yml  ci.yml  codec-perf-coverage.yml  docker.yml  docs.yml  phase2-zoo-validation.yml  regression-surface.yml  sbir-demo-smoke.yml  vertex-trainer-coverage.yml
claude-code-platform/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
claude-code-platform/.claude-plugin/: marketplace.json
claude-code-platform/.github/workflows/: ci.yml
claude-code-platform/docs/adr/: 0001-marketplace-not-template.md  0002-vendored-stdlib-hook-runtime.md  0003-release-pinning-model.md
claude-code-platform/docs/architecture/: c4.md
claude-code-platform/plugins/eng-standards/: README.md
claude-code-platform/plugins/eng-standards/.claude-plugin/: plugin.json
claude-code-platform/plugins/eng-standards/agents/: code-reviewer.md  test-enforcer.md
claude-code-platform/plugins/eng-standards/config/: defaults.json
claude-code-platform/plugins/eng-standards/hooks/: hooks.json
claude-code-platform/plugins/eng-standards/hooks/scripts/: quality_scan.py
claude-code-platform/plugins/eng-standards/hooks/scripts/_runtime/: constants.py  failsafe.py  models.py
claude-code-platform/plugins/eng-standards/skills/c4-architecture/: SKILL.md
claude-code-platform/plugins/eng-standards/skills/c4-architecture/references/: mermaid-conventions.md
claude-code-platform/plugins/eng-standards/skills/python-standards/: SKILL.md
claude-code-platform/plugins/eng-standards/skills/python-standards/references/: patterns.md
claude-code-platform/plugins/eng-standards/skills/test-strategy/: SKILL.md
claude-code-platform/plugins/eng-standards/skills/test-strategy/references/: test-pyramid.md
claude-code-platform/release/: pins.json
claude-code-platform/tests/: conftest.py  helpers.py
claude-code-platform/tests/e2e/: test_plugin_load_smoke.py
claude-code-platform/tests/unit/: test_cli_validate.py  test_gates_error_branches.py  test_hook_failsafe.py  test_hook_jsonlog.py  test_hook_models.py  test_hook_tunables.py  test_quality_scan_contract.py  test_quality_scan_unit.py  test_review_fixes.py  test_schemas.py  test_sync_catalog.py  test_sync_cli.py  test_sync_runtime.py  test_validate_gates.py
claude-code-platform/tools/: __init__.py  logging_config.py  sync_catalog.py  sync_runtime.py
claude-code-platform/tools/hook_runtime/: __init__.py  constants.py  jsonlog.py  tunables.py
claude-code-platform/tools/validate/: __init__.py  __main__.py  config.py  gates.py  schemas.py
config/: schemas.py  train.yaml  train_5hr.yaml  train_chess.yaml  train_experiment.yaml  train_extended.yaml  train_fast.yaml  train_pde.yaml
config/agents/: research_loop_cpu.yaml  research_loop_demo.yaml
config/baselines/: poc_headline.example.json  stochastic_galerkin_ci.json  transfer_ci.json
config/benchmarks/: sbir_p40.yaml  sbir_suite.yaml
dashboard/: __init__.py  app.py  config.py  utils.py
docker/: Dockerfile.inference  Dockerfile.trainer  Dockerfile.validator  Dockerfile.vertex
docs/: AGENTIC_NEXT_STEPS_INVESTIGATION.md  CHESS_ENGINE_BENCHMARKING.md  DOCKERIZATION_PLAN.md  FORGE_INTEGRATION.md  GALERKIN_FUSION_HEAD_PLAN.md  GLOSSARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V3.md  NEXT_STEPS_PLAN.md  PETTINGZOO_DEMO_PLAN.md  PLAN_2026-04-27.md  PR86_HEADLINE_RUNS.md  PROMPT_TEMPLATE.md  README.md  REMAINING_TIER1_TIER2_PLAN.md  ROI_IMPLEMENTATION_PLAN.md  TRAINING_DATA_SOURCES.md  TRAINING_IMPLEMENTATION_TEMPLATE.md  VERTEX_TRAINING_PLAN.md  VIDEO_POC_PLAN.md  distributed_training_guide.md  getting-started.md  index.md  mathematical-foundation.md  related-work.md  training_summary.md  use-cases.md  vertex_training_results.md
docs/adr/: README.md  (+2 more)
hf_space/: .gitattributes  README.md  app.py  requirements.txt
notebooks/: AlphaGalerkin_Colab.ipynb  AlphaGalerkin_Demo.ipynb  Darcy_PoC.ipynb  MultiPhysics_Demo.ipynb
partners/: academic_candidates.md  outreach_template.md
proposal/: concept_note.md  outline.md
results/: lambda_scheduling.csv  lshape_mcts_vs_dorfler.csv  stochastic_galerkin_compare.csv  transfer_baseline_compare.csv
sbir/: commercialization_plan.md  topic_fit_analysis.md
scripts/: audit_abstractions.py  benchmark_codec.py  build_vertex_container.sh  check_doc_links.py  decode_video.py  demo_compression.py  demo_pde_solver.py  demo_transfer.py  diagnose_connectivity.py  encode_video.py  evaluate_model.py  export_helix_stl.py  inspect_checkpoint.py  launch_hf_space.py  play_engine.py  run_lambda_scheduling.py  run_lshape_amr.py  run_sbir_demo.py  run_sbir_p40.py  run_stochastic_galerkin_compare.py  run_transfer_baseline_compare.py  train.py  train_chess.py  train_compression.py  train_compression_zoo.py  train_compression_zoo_entry.py  train_vertex.py  validate_workflow.py  vertex_jobs.py
specs/: README.md  TEMPLATE.spec.md  headline_runs.spec.md  lambda_scheduling.spec.md  llm_prior_ood.spec.md  lshape_amr_compare.spec.md  noyron_basis.spec.md  stochastic_galerkin_nke.spec.md  transfer_baseline_compare.spec.md
src/: constants.py
tests/: __init__.py  conftest.py  test_constants.py  test_data_generation.py  test_operator_training.py  test_physics_solvers.py
(+1464 files in other folders)
