[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphagalerkin"
version = "0.1.0"
description = "Resolution-independent Go AI using Continuous Operator Learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AlphaGalerkin Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "einops>=0.7.0",
    "jaxtyping>=0.2.25",
    "pydantic>=2.0.0",
    "hydra-core>=1.3.0",
    "structlog>=23.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "typing_extensions>=4.0.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-PyYAML>=2024.1.1.20240311",
]
vertex = [
    "google-cloud-aiplatform>=1.36.0",
    "google-cloud-storage>=2.10.0",
]

[project.scripts]
alphagalerkin = "src.tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "ANN", "B", "C4", "SIM"]
ignore = [
    "D100",   # Missing docstring in public module
    "D102",   # Missing docstring in public method
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in __init__
    "D203",   # Incompatible with D211 (no-blank-line-before-class)
    "D213",   # Incompatible with D212 (multi-line-summary-first-line)
    "ANN001", # Missing type annotation for function argument (use mypy instead)
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs (intentional Any)
    "ANN202", # Missing return type for private function
    "ANN204", # Missing return type for special method
    "F722",   # Syntax error in forward annotation (jaxtyping)
    "F821",   # Undefined name (jaxtyping dimension names)
    "ANN401", # Dynamically typed expressions (Any) allowed in **kwargs
    "D401",   # First line should be imperative mood (overly strict)
    "N806",   # Variable in function should be lowercase (math notation exceptions)
    "N812",   # Lowercase imported as non-lowercase (e.g., numpy as np)
    "N817",   # CamelCase imported as acronym (e.g., DDP)
    "SIM102", # Nested if statements (sometimes clearer for readability)
    "SIM103", # Return condition directly (sometimes clearer with explicit if)
    "SIM108", # Use ternary operator (sometimes less clear)
    "SIM112", # Use capitalized env variable
    "SIM113", # Use enumerate (not always applicable)
    "B904",   # Raise from within except (typer.Exit doesn't support from)
    "B027",   # Empty method in abstract class without abstract decorator
    "B023",   # Function definition does not bind loop variable
    "E741",   # Ambiguous variable name (e.g., I for Intra frame)
]

[tool.ruff.lint.per-file-ignores]
# Test files have more relaxed linting
"tests/**/*.py" = [
    "ANN201",  # Missing return type annotation for public function
    "B007",    # Loop control variable not used
    "B017",    # assertRaises / pytest.raises without match
    "B905",    # zip without strict
    "D101",    # Missing docstring in public class
    "D103",    # Missing docstring in public function
    "E402",    # Module level import not at top of file
    "F841",    # Local variable assigned but never used
    "N803",    # Argument name should be lowercase
    "SIM117",  # Use single with statement
    "SIM222",  # Use True/False instead of expressions
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "einops.*",
    "hydra.*",
    "hypothesis.*",
    "wandb.*",
    "scipy.*",
    "jaxtyping.*",
    "pydantic.*",
    "structlog.*",
    "onnxruntime.*",
    "onnx.*",
    "omegaconf.*",
    "optuna.*",
    "google.*",
    "PIL.*",
    "cv2.*",
    "torchvision.*",
    "numpy.*",
    "pytest.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.*"
# Disable misc errors for torch.nn.Module and pydantic.BaseModel subclassing
# Disable name-defined for jaxtyping dimension names
disable_error_code = ["misc", "name-defined", "untyped-decorator"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
strict = false
disable_error_code = ["misc", "type-arg", "abstract"]

[[tool.mypy.overrides]]
module = "config.*"
disallow_untyped_decorators = false
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end integration tests",
    "gpu_required: tests requiring GPU",
    "onnx_required: tests requiring ONNX",
    "video: video compression tests",
    "requires_video: tests requiring real video files",
    "integration: integration tests",
]
