[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphagalerkin"
version = "0.1.0"
description = "Resolution-independent operator learning + MCTS for board games (Go, Chess) and PDE solving"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ian Cruickshank", email = "ianshank@gmail.com"}
]
keywords = [
    "operator-learning",
    "galerkin",
    "monte-carlo-tree-search",
    "partial-differential-equations",
    "alphazero",
    "resolution-invariant",
    "scientific-machine-learning",
    "fourier-neural-operator",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "torch>=2.0.0",
    "einops>=0.7.0",
    "jaxtyping>=0.2.25",
    "pydantic>=2.0.0",
    "hydra-core>=1.3.0",
    "structlog>=23.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "wandb>=0.16.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/ianshank/AlphaGalerkin"
Repository = "https://github.com/ianshank/AlphaGalerkin"
Documentation = "https://ianshank.github.io/AlphaGalerkin/"
Issues = "https://github.com/ianshank/AlphaGalerkin/issues"
Changelog = "https://github.com/ianshank/AlphaGalerkin/blob/HEAD/CHANGELOG.md"

[project.optional-dependencies]
# scikit-fem backs the hp-adaptive FEM classical baseline used for DOE
# Genesis proposal benchmarks (see src/research/fem_baseline.py).
fem = [
    "scikit-fem>=9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.10,<1.12",
    # Pinned: a newer ruff formats Markdown by default (graduated from preview),
    # which reformats embedded code blocks in *.md docs and breaks the CI format
    # gate on unrelated files. Keep aligned with the pin in .github/workflows/ci.yml.
    "ruff==0.15.8",
    # Pin pydantic to align with lint step and avoid 2.10+ behavioural changes
    "pydantic>=2.7,<2.10",
    # Dashboard test dependencies
    "gradio>=6.0.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
]
# Test-only dependencies for suites that previously used pytest.importorskip and
# skipped silently in the default CI matrix because their deps were absent. The
# dedicated `test-extras` CI job installs this group so those code paths (FEM
# baseline, ONNX export/validate, PettingZoo adapter) actually execute rather than
# skipping. onnxscript is required by torch>=2.x `torch.onnx.export` (dynamo path).
test-extras = [
    "scikit-fem>=9.0",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "onnxscript>=0.1",
    "pettingzoo>=1.24",
]
jax = [
    # Pins are intentionally narrow because flax 0.9 (the only release
    # compatible with our ``JaxBackend`` Module call sites) has a narrow
    # JAX support window:
    #
    #   * JAX 0.4.31+ reworked its trace machinery (``EvalTrace``) in a
    #     way that breaks ``flax<0.10`` with ``AttributeError: 'EvalTrace'
    #     object has no attribute 'level'`` during ``nn.Module.init``.
    #     This takes out the whole ``tests/ -m cross_backend`` suite.
    #   * flax>=0.10 requires jax>=0.6 which changed ``nn.Module``
    #     initialisation semantics (trace-context requirements) that
    #     ``src/backend/jax_backend.py`` has not been migrated to.
    #
    # The ``jnp.clip`` signature (the other historical pin driver) is
    # already forward-compatible: ``JaxBackend.clamp`` passes bounds
    # positionally so it works on both the legacy ``a_min``/``a_max``
    # kwargs (JAX<0.5) and the new ``min``/``max`` (JAX>=0.5).
    #
    # Until flax 0.10 ``Module`` / trace-context migration lands, we pin
    # the stack to the last mutually-compatible release set:
    # jax/jaxlib==0.4.30 + flax==0.9.0 + orbax<0.10.
    # TODO: drop these upper bounds after modernising the JaxBackend.
    "jax[cpu]>=0.4.30,<0.4.31",
    "jaxlib>=0.4.30,<0.4.31",
    "flax>=0.9.0,<0.10",
    "optax>=0.2.0,<0.3",
    "orbax-checkpoint>=0.5.0,<0.10",
    "chex>=0.1.85,<0.1.91",
]
jax-gpu = [
    # Mirror the CPU pins; see ``jax`` extra above for rationale.
    "jax[cuda12]>=0.4.30,<0.4.31",
    "jaxlib>=0.4.30,<0.4.31",
    "flax>=0.9.0,<0.10",
    "optax>=0.2.0,<0.3",
    "orbax-checkpoint>=0.5.0,<0.10",
    "chex>=0.1.85,<0.1.91",
]
# Optional bridge to Leap 71's PicoGK voxel/SDF kernel for the Noyron HX
# integration scenario. Not installed in CI; the analytical-helix SDF in
# src/pde/sdf.py keeps the test suite and headline demo independent of
# the .NET runtime that pythonnet pulls in.
picogk = [
    "pythonnet>=3.0",
]
# OpenAI-compatible local LLM client used by the LLM-prior MCTS ablation
# scenario (Qwen-14B in LM Studio or any compatible server). The base
# install never imports the SDK; the integration code under
# `src/integrations/lm_studio/` imports it lazily so a missing extra
# fails only when an LMStudioClient is actually constructed. The pin
# tracks the openai-python releases that accept `seed` and
# `response_format={"type": "json_object"}` simultaneously on
# `chat.completions.create`.
lm-studio = [
    "openai>=1.40,<2.0",
]
# Documentation site toolchain (MkDocs Material + API autodoc from docstrings).
# Only needed to build/serve the docs site locally or in the docs CI workflow;
# `mkdocstrings` imports the package, so a base install (torch etc.) is also
# pulled in transitively.
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
alphagalerkin = "src.tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "dashboard*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "ANN", "B", "C4", "SIM"]
ignore = [
    "D100",   # Missing docstring in public module
    "D102",   # Missing docstring in public method
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in __init__
    "D203",   # Incompatible with D211 (no-blank-line-before-class)
    "D213",   # Incompatible with D212 (multi-line-summary-first-line)
    "ANN001", # Missing type annotation for function argument (use mypy instead)
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs (intentional Any)
    "ANN101", # Missing type annotation for self (deprecated in ruff 0.3+)
    "ANN102", # Missing type annotation for cls (deprecated in ruff 0.3+)
    "ANN202", # Missing return type for private function
    "ANN204", # Missing return type for special method
    "F722",   # Syntax error in forward annotation (jaxtyping)
    "F821",   # Undefined name (jaxtyping dimension names)
    "ANN401", # Dynamically typed expressions (Any) allowed in **kwargs
    "D401",   # First line should be imperative mood (overly strict)
    "N806",   # Variable in function should be lowercase (math notation exceptions)
    "N812",   # Lowercase imported as non-lowercase (e.g., numpy as np)
    "N817",   # CamelCase imported as acronym (e.g., DDP)
    "SIM102", # Nested if statements (sometimes clearer for readability)
    "SIM103", # Return condition directly (sometimes clearer with explicit if)
    "SIM108", # Use ternary operator (sometimes less clear)
    "SIM112", # Use capitalized env variable
    "SIM113", # Use enumerate (not always applicable)
    "B904",   # Raise from within except (typer.Exit doesn't support from)
    "B027",   # Empty method in abstract class without abstract decorator
    "B023",   # Function definition does not bind loop variable
    "E741",   # Ambiguous variable name (e.g., I for Intra frame)
]

[tool.ruff.lint.per-file-ignores]
# Test files have more relaxed linting
"tests/**/*.py" = [
    "ANN201",  # Missing return type annotation for public function
    "B007",    # Loop control variable not used
    "B017",    # assertRaises / pytest.raises without match
    "B905",    # zip without strict
    "D101",    # Missing docstring in public class
    "D103",    # Missing docstring in public function
    "E402",    # Module level import not at top of file
    "F841",    # Local variable assigned but never used
    "N803",    # Argument name should be lowercase
    "SIM117",  # Use single with statement
    "SIM222",  # Use True/False instead of expressions
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "einops.*",
    "hydra.*",
    "hypothesis.*",
    "wandb.*",
    "scipy.*",
    "jaxtyping.*",
    "pydantic.*",
    "structlog.*",
    "onnxruntime.*",
    "onnx.*",
    "omegaconf.*",
    "optuna.*",
    "google.*",
    "PIL.*",
    "cv2.*",
    "numpy.*",
    "pytest.*",
    "jax.*",
    "flax.*",
    "optax.*",
    "orbax.*",
    "chex.*",
    "yaml",
    "yaml.*",
    "typer",
    "typer.*",
    "rich",
    "rich.*",
    "onnxscript",
    "onnxscript.*",
    "dllist",
    "dllist.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.*"
# Disable misc errors for torch.nn.Module and pydantic.BaseModel subclassing
# Disable name-defined for jaxtyping dimension names
# Disable no-any-return: torch/einops stubs return Any for Tensor operations
# Disable type-arg: bare ndarray/NDArray in numpy/scipy interop code
disable_error_code = ["misc", "name-defined", "no-any-return", "type-arg"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
strict = false
disable_error_code = ["misc", "type-arg", "abstract"]

[[tool.mypy.overrides]]
module = "config.*"
disallow_untyped_decorators = false
disable_error_code = ["misc"]

# Dashboard uses Gradio which has incomplete stubs; relax strict checks
[[tool.mypy.overrides]]
module = [
    "dashboard",
    "dashboard.app",
    "dashboard.config",
    "dashboard.utils",
    "dashboard.tabs",
    "dashboard.tabs.game_tab",
    "dashboard.tabs.pde_tab",
    "dashboard.tabs.poc_tab",
    "dashboard.tabs.training_tab",
]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disable_error_code = [
    "misc", "type-arg", "no-any-return", "assignment", "arg-type",
    "return-value", "union-attr", "attr-defined", "call-arg",
    "no-untyped-call", "no-untyped-def", "import",
]

# External library interface modules with incomplete stubs
[[tool.mypy.overrides]]
module = [
    "src.physics.darcy",
    "src.backend.jax_backend",
    "src.research.baselines",
]
disable_error_code = ["no-untyped-call"]

# Flax JAX modules using @nn.compact decorator which is untyped in flax stubs
[[tool.mypy.overrides]]
module = [
    "src.math_kernel.spectral",
    "src.math_kernel.integral",
    "src.math_kernel.basis",
]
disallow_untyped_decorators = false

# Modules with numpy ndarray/Tensor interop that have structural assignment issues
[[tool.mypy.overrides]]
module = [
    "src.pde.operators",
    "src.pde.games.mesh_refinement",
    "src.pde.config",
    "src.pde.registry",
    "src.agents.collocation",
    "src.agents.decomposition",
    "src.agents.meta",
    "src.mcts.node",
    "src.mcts.search",
    "src.games.state",
    "src.games.go",
    "src.games.registry",
    "src.games.sgf.node",
    "src.games.sgf.converter",
    "src.games.sgf.writer",
    "src.games.sgf.parser",
    "src.engines.match",
    "src.engines.registry",
    "src.training.evaluation",
    "src.training.loss_balancing",
    "src.training.losses.physics",
    "src.training.wandb_logger",
    "src.experiments.train_physics",
    "src.experiments.verify_transfer",
    "src.experiments.benchmark_fnet",
    "src.experiments.physics_model",
    "src.physics.poisson",
    "src.physics.solver",
    "src.data.physics_dataset",
    "src.tools.gtp",
    "src.analysis.reviewer",
    "src.deployment.export_onnx",
    "src.deployment.quantize",
    "src.deployment.validate",
    "src.poc.tuning.sampler",
    "src.poc.tuning.config",
    "src.poc.statistics.significance",
    "src.demos.config",
    "src.demos.architecture_demo",
    "src.distributed.trainer",
    "src.distributed.worker",
    "src.distributed.launcher",
    "src.distributed.gradient_sync",
    "src.analysis.config",
    "src.research.comparison",
    "src.research.benchmark",
    "src.demos.physics_demo",
    "src.demos.benchmark_demo",
    "src.demos.visualizations",
    "src.poc.scenarios.transfer",
    "src.research.transfer_baseline_compare",
]
disable_error_code = ["assignment", "arg-type", "return-value", "operator", "union-attr",
                      "index", "dict-item", "attr-defined", "var-annotated", "call-arg",
                      "call-overload", "no-untyped-call", "no-untyped-def",
                      "type-abstract", "has-type", "unused-ignore", "type-var"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end integration tests",
    "gpu_required: tests requiring GPU",
    "onnx_required: tests requiring ONNX",
    "jax: JAX-specific tests",
    "cross_backend: cross-backend equivalence tests",
    "integration: integration tests",
    "dashboard: dashboard UI tests",
]

[tool.coverage.run]
# Branch coverage enforces that both sides of each conditional are exercised
# (true and false branches, not just lines). Required by the project's
# 85% minimum and surfaces dead branches that line coverage misses.
branch = true
# Omit modules whose tests are excluded from CI coverage runs.
# backend tests cause JAX crashes on Windows CI and are skipped
# demos tests are ignored via --ignore=tests/demos/
# fem_baseline requires the optional ``fem`` extra (scikit-fem); its tests
# use ``pytest.importorskip`` and skip cleanly in the default CI matrix,
# so including it here would unfairly tank the global coverage gate.
omit = [
    "src/backend/*",
    "src/demos/*",
    "src/research/fem_baseline.py",
]

[tool.coverage.report]
# Enforce minimum coverage thresholds
fail_under = 85
show_missing = true
