[project]
name = "claude-code-platform"
version = "0.1.0"
description = "Claude Code plugin marketplace: catalog, plugins, and dev-side validation harness"
requires-python = ">=3.11"
# Dev-side harness dependencies ONLY. Hook scripts and tools/hook_runtime are
# stdlib-only by contract (ADR-0002) and must never appear here as runtime deps.
dependencies = [
    "pydantic>=2.7,<3",
    "structlog>=24.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "e2e: end-to-end smoke tests that shell out to the claude CLI (skipped when unavailable)",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["plugins/*/hooks/scripts/_runtime"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
